Updated Indonesian translation

--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@
 # Copyright (C) 2010 THE gnome-color-manager'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the gnome-color-manager package.
 #
-# Andika Triwidada <andika@gmail.com>, 2010.
+# Andika Triwidada <andika@gmail.com>, 2010, 2012.
 # Dirgita <dirgitadevina@yahoo.co.id>, 2010.
 msgid ""
 msgstr ""
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
 "POT-Creation-Date: 2012-05-11 11:01+0000\n"
-"PO-Revision-Date: 2012-08-30 01:03+0700\n"
+"PO-Revision-Date: 2012-08-30 22:55+0700\n"
 "Last-Translator: Andika Triwidada <andika@gmail.com>\n"
 "Language-Team: GNOME Indonesian Translation Team <gnome@i15n.org>\n"
 "MIME-Version: 1.0\n"
@@ -378,7 +378,7 @@ msgstr "Menyiapkan instrumen"
 
 #: ../src/gcm-calibrate-argyll.c:1938
 msgid "Setting up the instrument for use…"
-msgstr "Menyetel instrumen untuk dipakai..."
+msgstr "Menyetel instrumen untuk dipakai…"
 
 #: ../src/gcm-calibrate-argyll.c:2150 ../src/gcm-calibrate-argyll.c:2216
 msgid "Calibration error"
@@ -488,6 +488,8 @@ msgid ""
 "Place the colorimeter on the area of white next to the letter and click and "
 "hold the measure switch."
 msgstr ""
+"Tempatkan colorimeter pada area putih di dekat huruf lalu klik dan tahan "
+"tombol ukur."
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2394
@@ -495,13 +497,15 @@ msgid ""
 "Slowly scan the target line from left to right and release the switch when "
 "you get to the end of the page."
 msgstr ""
+"Pelahan pindai garis target dari kiri ke kanan dan lepaskan tombol ketika "
+"Anda mencapai akhir halaman."
 
 #. TRANSLATORS: dialog message, the sensor has to be above the line
 #: ../src/gcm-calibrate-argyll.c:2398
 msgid ""
 "Ensure the center of the device is properly aligned with the row you are "
 "trying to measure."
-msgstr ""
+msgstr "Pastikan bahwa pusat perangkat lurus dengan baris yang coba Anda ukur."
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2402
@@ -509,6 +513,8 @@ msgid ""
 "If you make a mistake, just release the switch, and you'll get a chance to "
 "try again."
 msgstr ""
+"Bila Anda membuat suatu kesalahan, lepas saja tombol, dan Anda akan dapat "
+"mencoba lagi."
 
 #: ../src/gcm-calibrate-argyll.c:2516
 msgid "Printing"
@@ -538,6 +544,7 @@ msgstr "Mencetak dibatalkan."
 #: ../src/gcm-calibrate.c:305
 msgid "Could not calibrate and profile using this color measuring instrument"
 msgstr ""
+"Tak bisa mengkalibrasi dan memprofil memakai instrumen pengukuran warna ini"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-calibrate.c:308
@@ -545,6 +552,8 @@ msgid ""
 "This color measuring instrument is not designed to support calibration and "
 "profiling projectors."
 msgstr ""
+"Instrumen pengukuran warna ini tak dirancang untuk mendukung pengkalibrasian "
+"dan pemrofilan projektor."
 
 #: ../src/gcm-calibrate.c:522
 msgid "Please attach instrument"
@@ -552,7 +561,6 @@ msgstr "Silakan pasang instrumen"
 
 #. TRANSLATORS: dialog message, ask user to attach device, and there's an example image
 #: ../src/gcm-calibrate.c:530
-#, fuzzy
 msgid ""
 "Please attach the measuring instrument to the center of the screen on the "
 "gray square like the image below."
@@ -562,7 +570,6 @@ msgstr ""
 
 #. TRANSLATORS: dialog message, ask user to attach device
 #: ../src/gcm-calibrate.c:533
-#, fuzzy
 msgid ""
 "Please attach the measuring instrument to the center of the screen on the "
 "gray square."
@@ -573,7 +580,7 @@ msgstr "Silakan pasang instrumen pengukuran di pusat layar pada kotak kelabu."
 msgid ""
 "You will need to hold the device on the screen for the duration of the "
 "calibration."
-msgstr ""
+msgstr "Anda perlu menahan perangkat pada layar selama durasi kalibrasi."
 
 #: ../src/gcm-calibrate.c:547 ../src/gcm-calibrate.c:575
 #: ../src/gcm-calibrate.c:615
@@ -585,29 +592,24 @@ msgid "Please configure instrument"
 msgstr "Silakan konfigurasi instrumen"
 
 #: ../src/gcm-calibrate.c:579
-#, fuzzy
 msgid ""
 "Please set the measuring instrument to screen mode like the image below."
 msgstr ""
-"Silakan pasang instrumen pengukuran di pusat layar pada kotak kelabu seperti "
-"gambar di bawah."
+"Silakan tata instrumen pengukuran ke mode layar seperti gambar di bawah."
 
 #: ../src/gcm-calibrate.c:584
-#, fuzzy
 msgid "Please set the measuring instrument to screen mode."
-msgstr "Silakan pasang instrumen pengukuran di pusat layar pada kotak kelabu."
+msgstr "Silakan tata instrumen pengukuran ke mode layar."
 
 #: ../src/gcm-calibrate.c:619
-#, fuzzy
 msgid ""
 "Please set the measuring instrument to calibration mode like the image below."
 msgstr ""
-"Silakan pasang instrumen pengukuran di pusat layar pada kotak kelabu seperti "
-"gambar di bawah."
+"Silakan tata instrumen pengukuran ke mode kalibrasi seperti gambar di bawah."
 
 #: ../src/gcm-calibrate.c:624
 msgid "Please set the measuring instrument to calibration mode."
-msgstr ""
+msgstr "Silakan tata instrumen pengukuran ke mode kalibrasi."
 
 #. TRANSLATORS: dialog for file->open dialog. A calibration target image is the
 #. * aquired image of the calibration target, e.g. an image file that looks
@@ -647,14 +649,12 @@ msgid "Open"
 msgstr "Buka"
 
 #: ../src/gcm-calibrate-main.c:146
-#, fuzzy
 msgid "Calibration is not complete"
-msgstr "Lengkap, tapi tak unik"
+msgstr "Kalibrasi tak lengkap"
 
 #: ../src/gcm-calibrate-main.c:149
-#, fuzzy
 msgid "Are you sure you want to cancel the calibration?"
-msgstr "Batalkan operasi?"
+msgstr "Anda yakin hendak membatalkan kalibrasi?"
 
 #: ../src/gcm-calibrate-main.c:152
 #| msgid "Device Calibration"
@@ -705,11 +705,15 @@ msgid ""
 "Any existing screen correction will be temporarily turned off and the "
 "brightness set to maximum."
 msgstr ""
+"Sebarang koreksi layar yang ada akan dimatikan sementara dan kecerahan "
+"disetel ke maksimum."
 
 #. TRANSLATORS: this is the final intro page text
 #: ../src/gcm-calibrate-main.c:739
 msgid "You can cancel this process at any stage by pressing the cancel button."
 msgstr ""
+"Anda dapat membatalkan proses ini pada tahap manapun dengan menekan tombol "
+"batal."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:745
@@ -755,6 +759,8 @@ msgid ""
 "To view details about the new profile or to undo the calibration visit the "
 "<a href=\"control-center://color\">control center</a>."
 msgstr ""
+"Untuk melihat rincian tentang profil baru atau membatalkan kalibrasi "
+"kunjungi <a href=\"control-center://color\">pusat kendali</a>."
 
 #: ../src/gcm-calibrate-main.c:892
 msgid ""
@@ -762,6 +768,9 @@ msgid ""
 "\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
 "Windows</a> systems."
 msgstr ""
+"Anda dapat memakai profil dengan sistem <a href=\"import-linux\">Linux</a>, "
+"<a href=\"import-osx\">Apple OS X</a>, dan <a href=\"import-windows"
+"\">Microsoft Windows</a> systems."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:904 ../src/gcm-calibrate-main.c:1880
@@ -796,6 +805,8 @@ msgid ""
 "Before calibrating the display, it is recommended to configure your display "
 "with the following settings to get optimal results."
 msgstr ""
+"Sebelum mengkalibrasi tampilan, disarankan untuk mengkonfigurasi tampilan "
+"Anda dengan pengaturan berikut untuk memperoleh hasil optimal."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:992
@@ -803,6 +814,8 @@ msgid ""
 "You may want to consult the owner's manual for your display on how to "
 "achieve these settings."
 msgstr ""
+"Anda mungkin perlu membaca manual pemilik bagi tampilan Anda tentang "
+"bagaimana mencapai pengaturan ini."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:995
@@ -812,7 +825,7 @@ msgstr "Reset tampilan Anda ke bawaan pabrik."
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:998
 msgid "Disable dynamic contrast if your display has this feature."
-msgstr ""
+msgstr "Nonaktifkan kontras dinamis bila tampilan Anda memiliki fitur ini."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:1001
@@ -820,17 +833,19 @@ msgid ""
 "Configure your display with custom color settings and ensure the RGB "
 "channels are set to the same values."
 msgstr ""
+"Tata tampilan Anda dengan pengaturan warna ubahan dan pastikan bahwa kanal-"
+"kanal RGB diatur ke nilai yang sama."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: ../src/gcm-calibrate-main.c:1004
 msgid "If custom color is not available then use a 6500K color temperature."
-msgstr ""
+msgstr "Bila warna ubahan tak tersedia maka pakailah temperatur warna 6500K."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:1007
 msgid ""
 "Adjust the display brightness to a comfortable level for prolonged viewing."
-msgstr ""
+msgstr "Setel kecerahan tampilan ke tingkat yang nyaman untuk pemakaian lama."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate-main.c:1012
@@ -838,6 +853,8 @@ msgid ""
 "For best results, the display should have been powered for at least 15 "
 "minutes before starting the calibration."
 msgstr ""
+"Untuk hasil terbaik, tampilan mesti telah dinyalakan paling tidak 15 menit "
+"sebelum memulai kalibrasi."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1018
@@ -870,12 +887,13 @@ msgstr "Pasang Alat"
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/gcm-calibrate-main.c:1144
 msgid "Common color target files are not installed on this computer."
-msgstr ""
+msgstr "Berkas target warna biasa tak dipasang pada komputer ini."
 
 #. TRANSLATORS: dialog message saying the color targets are not installed
 #: ../src/gcm-calibrate-main.c:1146
 msgid "Color target files are needed to convert the image to a color profile."
 msgstr ""
+"Berkas target warna diperlukan untuk mengonversi gambar ke profil warna."
 
 #. TRANSLATORS: dialog message, asking if it's okay to install them
 #: ../src/gcm-calibrate-main.c:1148
@@ -886,6 +904,7 @@ msgstr "Anda ingin mereka dipasang?"
 #: ../src/gcm-calibrate-main.c:1150
 msgid "If you already have the correct file, you can skip this step."
 msgstr ""
+"Bila Anda telah memiliki berkas yang benar, Anda dapat melewati langkah ini."
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1153
@@ -960,6 +979,8 @@ msgid ""
 "Before profiling the device, you have to manually capture an image of a "
 "calibration target and save it as a TIFF image file."
 msgstr ""
+"Sebelum membuat profil perangkat, Anda mesti secara manual menangkap gambar "
+"dari target kalibrasi dan menyimpannya sebagai berkas gambar TIFF."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1312
@@ -967,6 +988,8 @@ msgid ""
 "Ensure that the contrast and brightness are not changed and color correction "
 "profiles have not been applied."
 msgstr ""
+"Pastikan bahwa kontras dan kecerahan tak diubah dan profil koreksi warna "
+"belum diterapkan."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate-main.c:1315
@@ -974,6 +997,8 @@ msgid ""
 "The device sensor should have been cleaned prior to scanning and the output "
 "file resolution should be at least 200dpi."
 msgstr ""
+"Sensor perangkat mesti telah dibersihkan sebelum pemindaian dan resolusi "
+"berkas keluaran mesti paling tidak 200 dpi."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1321
@@ -981,6 +1006,7 @@ msgid ""
 "Ensure that the white-balance has not been modified by the camera and that "
 "the lens is clean."
 msgstr ""
+"Pastikan bahwa white-balance belum diubah oleh kamera dan lensa bersih."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1325
@@ -1005,7 +1031,7 @@ msgstr "Pilih tipe tampilan Anda"
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1406
 msgid "Select the monitor type that is attached to your computer."
-msgstr ""
+msgstr "Pilih tipe monitor yang tersambung ke komputer Anda."
 
 #: ../src/gcm-calibrate-main.c:1408
 msgid "LCD"
@@ -1031,13 +1057,15 @@ msgstr "Pilih Tipe Tampilan"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1485
 msgid "Choose your display target white point"
-msgstr ""
+msgstr "Pilih titik putih target tampilan Anda"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1492
 msgid ""
 "Most displays should be calibrated to a CIE D65 illuminant for general usage."
 msgstr ""
+"Kebanyakan tampilan mesti dikalibrasi ke iluminan CIE D65 untuk penggunaan "
+"umum."
 
 #: ../src/gcm-calibrate-main.c:1494
 msgid "CIE D50 (Printing and publishing)"
@@ -1056,9 +1084,8 @@ msgid "CIE D75"
 msgstr "CIE D75"
 
 #: ../src/gcm-calibrate-main.c:1531
-#, fuzzy
 msgid "Native (Already set manually)"
-msgstr "Silakan set secara manual"
+msgstr "Asli (Telah ditata secara manual)"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1543
@@ -1076,6 +1103,8 @@ msgid ""
 "Please indicate if you want to profile a local printer, generate some test "
 "patches, or profile using existing test patches."
 msgstr ""
+"Harap indikasikan bila Anda ingin memprofil pencetak lokal, menjangkitkan "
+"beberapa perca uji, atau memprofil memakai perca uji yang ada."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1620
@@ -1093,6 +1122,8 @@ msgstr "Pilih kualitas kalibrasi"
 #: ../src/gcm-calibrate-main.c:1669
 msgid "Higher quality calibration requires many color samples and more time."
 msgstr ""
+"Kalibrasi dengan kualitas lebih tinggi memerlukan banyak contoh warna dan "
+"lebih banyak waktu."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1673
@@ -1100,16 +1131,20 @@ msgid ""
 "A higher precision profile provides higher accuracy in color matching but "
 "requires more time for reading the color patches."
 msgstr ""
+"Profil dengan ketelitian lebih tinggi menyediakan akurasi yang lebih tinggi "
+"dalam mencocokkan warna tapi memerlukan lebih banyak waktu untuk membaca "
+"perca-perca warna."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1676
 msgid "For a typical workflow, a normal precision profile is sufficient."
-msgstr ""
+msgstr "Untuk alur kerja biasa, profil dengan ketelitian normal sudah cukup."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1681
 msgid "The high precision profile also requires more paper and printer ink."
 msgstr ""
+"Profil presisi tinggi juga memerlukan lebih banyak kertas dan tinta pencetak."
 
 #. TRANSLATORS: radio options for calibration precision
 #: ../src/gcm-calibrate-main.c:1686
@@ -1151,7 +1186,7 @@ msgstr "Judul profil"
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1789
 msgid "Choose a title to identify the profile on your system."
-msgstr ""
+msgstr "Pilih judul untuk mengidentifikasi profil pada sistem Anda."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1810
@@ -1179,6 +1214,7 @@ msgstr "Cek Sensor"
 #: ../src/gcm-calibrate-main.c:1874
 msgid "The device could not be found. Ensure it is plugged in and turned on."
 msgstr ""
+"Perangkat tak dapat ditemukan. Pastikan itu telah tertancap dan dinyalakan."
 
 #. TRANSLATORS: this is saved in the profile
 #: ../src/gcm-calibrate-main.c:2129
@@ -1231,30 +1267,29 @@ msgid "No profile"
 msgstr "Tak ada profil"
 
 #: ../src/gcm-cell-renderer-profile-text.c:88
-#, fuzzy, c-format
+#, c-format
 #| msgid "Defaults"
 msgid "Default %s"
-msgstr "Baku"
+msgstr "Baku %s"
 
 #. TRANSLATORS: this is a profile prefix to signify the
 #. * profile has been auto-generated for this hardware
 #: ../src/gcm-cell-renderer-profile-text.c:103
 #| msgid "Default"
 msgid "Default: "
-msgstr "Baku:"
+msgstr "Baku: "
 
 #. TRANSLATORS: this is a profile prefix to signify the
 #. * profile his a standard space like AdobeRGB
 #: ../src/gcm-cell-renderer-profile-text.c:109
 msgid "Colorspace: "
-msgstr "Ruang warna:"
+msgstr "Ruang warna: "
 
 #. TRANSLATORS: this is a profile prefix to signify the
 #. * profile is a test profile
 #: ../src/gcm-cell-renderer-profile-text.c:114
-#| msgid "Create _Profile"
 msgid "Test profile: "
-msgstr "Profil uji:"
+msgstr "Profil uji: "
 
 #. TRANSLATORS: turn on all debugging
 #: ../src/gcm-debug.c:105
@@ -1381,7 +1416,7 @@ msgstr "Permintaan gagal:"
 #. TRANSLATORS: no profile has been asigned to this device
 #: ../src/gcm-inspect.c:257
 msgid "There are no ICC profiles assigned to this file"
-msgstr ""
+msgstr "Tak ada profil ICC yang diberikan ke berkas ini"
 
 #. TRANSLATORS: this is a list of profiles suitable for the device
 #: ../src/gcm-inspect.c:262 ../src/gcm-inspect.c:334
@@ -1410,13 +1445,11 @@ msgstr "Ambil profil bagi jendela tertentu"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:374
-#, fuzzy
 msgid "Dump all details about this system"
 msgstr "Dump semua rincian tentang sistem ini"
 
 #. TRANSLATORS: just dumps the EDID to disk
 #: ../src/gcm-inspect.c:387
-#, fuzzy
 msgid "EDID inspect program"
 msgstr "Program pemeriksa EDID"
 
@@ -1440,20 +1473,19 @@ msgstr "Sensor tak punya penggerak native."
 #. TRANSLATORS: this is displayed the user has not got suitable hardware
 #: ../src/gcm-picker.c:383
 msgid "The attached colorimeter is not capable of reading a spot color."
-msgstr ""
+msgstr "Colorimeter yang tersambung tak mampu membaca warna spot."
 
 #. TRANSLATORS: this is when there are no profiles that can be used;
 #. * the search term is either "RGB" or "CMYK"
 #: ../src/gcm-picker.c:634
-#, fuzzy, c-format
+#, c-format
 msgid "No %s color spaces available"
 msgstr "Ruang warna %s tak tersedia"
 
 #. TRANSLATORS: tool that is used to pick colors
 #: ../src/gcm-picker.c:802
-#, fuzzy
 msgid "GNOME Color Manager Color Picker"
-msgstr "Pandual <application>Manajer Warna GNOME</application> Manual"
+msgstr "Penitik Warna Manajer Warna GNOME"
 
 #. TRANSLATORS: this is where the ICC profile has no description
 #: ../src/gcm-profile.c:162
@@ -1490,7 +1522,6 @@ msgstr "Hapus permanen profil?"
 
 #. TRANSLATORS: dialog message
 #: ../src/gcm-viewer.c:377
-#, fuzzy
 msgid ""
 "Are you sure you want to remove this profile from your system permanently?"
 msgstr ""
@@ -1626,21 +1657,18 @@ msgstr "Checksum berkas"
 
 #. TRANSLATORS: the color framework, e.g. 'colord'
 #: ../src/gcm-viewer.c:780
-#, fuzzy
 msgid "Framework product"
-msgstr "Kunci produk"
+msgstr "Produk kerangka kerja"
 
 #. TRANSLATORS: the framework binary, e.g. gcm-viewer
 #: ../src/gcm-viewer.c:782
-#, fuzzy
 msgid "Framework program"
-msgstr "Jalankan program"
+msgstr "Program kerangka kerja"
 
 #. TRANSLATORS: the framework release, e.g. '1.22'
 #: ../src/gcm-viewer.c:784
-#, fuzzy
 msgid "Framework version"
-msgstr "Versi Scratchbox:"
+msgstr "Versi kerangka kerja"
 
 #. TRANSLATORS: Where the profile data came from, e.g. 'test' or 'standard'
 #: ../src/gcm-viewer.c:786
