Updated Hebrew translation.

--- a/po/he.po
+++ b/po/he.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-13 23:23+0300\n"
-"PO-Revision-Date: 2012-08-13 23:23+0200\n"
+"POT-Creation-Date: 2012-09-07 16:21+0300\n"
+"PO-Revision-Date: 2012-09-07 16:29+0200\n"
 "Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Gezer <sh.yaron@gmail.com>\n"
 "Language: \n"
@@ -182,7 +182,7 @@ msgstr "x"
 
 #: ../data/gcm-viewer.ui.h:29
 msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
-msgstr ""
+msgstr "תרשים CIE 1931 המציג ייצוג דו־ממדי של גאמוט הפרופיל"
 
 #: ../data/gcm-viewer.ui.h:30
 msgid "CIE 1931"
@@ -194,7 +194,7 @@ msgstr ""
 
 #: ../data/gcm-viewer.ui.h:32
 msgid "3D Gamut"
-msgstr "גמוט תלת ממדי"
+msgstr "גאמוט תלת ממדי"
 
 #: ../data/gcm-viewer.ui.h:33
 msgid "Response out"
@@ -218,7 +218,7 @@ msgstr "פלט כרטיס המסך"
 
 #: ../data/gcm-viewer.ui.h:38
 msgid "A video card gamma table shows the curves loaded into the display"
-msgstr ""
+msgstr "טבלת הגאמה של כרטיס המסך מציגה את העקומות שנטענו לתצוגה"
 
 #: ../data/gcm-viewer.ui.h:39
 msgid "VCGT"
@@ -239,7 +239,7 @@ msgstr "התמונה הבאה"
 
 #: ../data/gcm-viewer.ui.h:44
 msgid "This shows what an image would look like if saved with the profile"
-msgstr ""
+msgstr "דוגמה זו מציגה איך תיראה תמונה אם תישמר בעזרת הפרופיל"
 
 #: ../data/gcm-viewer.ui.h:45
 msgid "From sRGB"
@@ -247,7 +247,7 @@ msgstr "מ־sRGB"
 
 #: ../data/gcm-viewer.ui.h:46
 msgid "This shows what an image would look like if opened with the profile"
-msgstr ""
+msgstr "דוגמה זו מציגה איך תיראה תמונה לו נפתחה בעזרת הפרופיל"
 
 #: ../data/gcm-viewer.ui.h:47
 msgid "To sRGB"
@@ -255,7 +255,7 @@ msgstr "ל־sRGB"
 
 #: ../data/gcm-viewer.ui.h:48
 msgid "Named colors are specific colors that are defined in the profile"
-msgstr ""
+msgstr "צבעים בשמות הם צבעים מסוימים שמוגדרים בפרופיל"
 
 #: ../data/gcm-viewer.ui.h:49
 msgid "Named Colors"
@@ -263,7 +263,7 @@ msgstr "צבעים בעלי שם"
 
 #: ../data/gcm-viewer.ui.h:50
 msgid "Metadata is additional information stored in the profile for programs to use."
-msgstr ""
+msgstr "נתוני על הם פרטים נוספים שמאוחסנים בפרופיל לשימוש תכניות."
 
 #: ../data/gcm-viewer.ui.h:51
 msgid "Metadata"
@@ -626,12 +626,12 @@ msgstr "כיול ההתקן שלך"
 #. TRANSLATORS: this is the final intro page text
 #: ../src/gcm-calibrate-main.c:732
 msgid "Any existing screen correction will be temporarily turned off and the brightness set to maximum."
-msgstr ""
+msgstr "כל תיקון מסך קיים יבוטל באופן זמני והבהירות תוגדר להיות המרבית."
 
 #. TRANSLATORS: this is the final intro page text
 #: ../src/gcm-calibrate-main.c:739
 msgid "You can cancel this process at any stage by pressing the cancel button."
-msgstr ""
+msgstr "ניתן לבטל תהליך זה בכל שלב על ידי לחיצה על לחצן הביטול."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:745
@@ -674,11 +674,11 @@ msgstr "ההתקן כויל בהצלחה."
 #. TRANSLATORS: this is the final summary
 #: ../src/gcm-calibrate-main.c:883
 msgid "To view details about the new profile or to undo the calibration visit the <a href=\"control-center://color\">control center</a>."
-msgstr ""
+msgstr "כדי לצפות בפרטים על הפרופיל החדש או לבטל את הכיול ניתן לבקר ב<a href=\"control-center://color\">מרכז הבקרה</a>."
 
 #: ../src/gcm-calibrate-main.c:892
 msgid "You can use the profile with <a href=\"import-linux\">Linux</a>, <a href=\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft Windows</a> systems."
-msgstr ""
+msgstr "ניתן להשתמש בפרופיל תחת מערכות <a href=\"import-linux\">Linux</a>, <a href=\"import-osx\">Apple OS X</a> ו־<a href=\"import-windows\">Microsoft Windows</a>."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:904
@@ -900,7 +900,7 @@ msgstr "נא לבחור את סוג התצוגה שלך"
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1406
 msgid "Select the monitor type that is attached to your computer."
-msgstr ""
+msgstr "נא לבחור את סוג הצג המחובר למחשב שלך."
 
 #: ../src/gcm-calibrate-main.c:1408
 msgid "LCD"
@@ -926,7 +926,7 @@ msgstr "נא לבחור את סוג התצוגה"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1485
 msgid "Choose your display target white point"
-msgstr ""
+msgstr "נא לבחור את הנקודה הלבנה של יעד התצוגה שלך"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1492
