Updated Malayalam file

--- a/po/ml.po
+++ b/po/ml.po
@@ -1098,7 +1098,7 @@ msgstr[1] ""
 msgid "(about %i minute)"
 msgid_plural "(about %i minutes)"
 msgstr[0] "(ഏകദേശം %i മിനിറ്റ്)"
-msgstr[1] ""
+msgstr[1] "(ഏകദേശം %i മിനിറ്റുകള്‍)"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1746
