--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,37 @@
+Version 3.6.0
+~~~~~~~~~~~~~
+Released: 2012-09-25
+
+* Translations
+ - Add Finnish translation (Jiri Grönroos)
+ - Implemented FUEL entries to Assamese translation (Nilamdyuti Goswami)
+ - Updated Brazilian Portuguese translation (Enrico Nicoletto)
+ - Updated British English translation (Bruce Cowan)
+ - Updated Czech translation (Milan Knížek)
+ - Updated Danish translation (Ask H. Larsen)
+ - Updated French translation (Alexandre Franke)
+ - Updated Greek help translation (Tom Tryfonidis)
+ - Updated Gujarati translation (Sweta Kothari)
+ - Updated Hebrew translation (Yaron Shahrabani)
+ - Updated Indonesian translation (Andika Triwidada)
+ - Updated Italian translation (Milo Casagrande)
+ - Updated Korean translation (Seong-ho Cho, Shankar Prasad)
+ - Updated Latvian translation (Rūdolfs Mazurs)
+ - Updated Lithuanian translation (Aurimas Černius)
+ - Updated Malayalam file (Ani Peter)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Persian translation (Arash Mousavi)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Portuguese translation (António Lima)
+ - Updated Punjabi Translation (A S Alam)
+ - Updated Russian translation (Yuri Myasoedov)
+ - Updated Spanish translation (Daniel Mustieles)
+ - Updated Swedish translation (Daniel Nylander)
+ - Updated Tamil translation (Dr.T.Vasudevan)
+ - Updated Traditional Chinese translation (Cheng-Chia Tseng)
+ - Updated Ukranian translation (Daniel Korostil)
+ - Updated Vietnamese translation (Nguyễn Thái Ngọc Duy)
+
 Version 3.5.90
 ~~~~~~~~~~~~~~
 Released: 2012-08-24
