Updated Latvian translation

--- a/po/lv.po
+++ b/po/lv.po
@@ -5,9 +5,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-24 12:51+0300\n"
-"PO-Revision-Date: 2012-09-24 12:57+0300\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
+"color-manager&keywords=I18N+L10N\n"
+"POT-Creation-Date: 2012-09-26 22:52+0000\n"
+"PO-Revision-Date: 2012-10-02 01:34+0300\n"
 "Last-Translator: Rūdolfs Mazurs <rudolfs.mazurs@gmail.com>\n"
 "Language-Team: Latvian <lata-l10n@googlegroups.com>\n"
 "Language: lv\n"
@@ -71,7 +72,7 @@ msgstr "Krāsu temperatūra:"
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:14
 msgid "Ambient:"
-msgstr "Apkārtējs:"
+msgstr "Apkārtējā:"
 
 #. This is the title to a combobox that switches the RGB conversion between different colorspaces such as Adobe RGB and sRGB
 #: ../data/gcm-picker.ui.h:16
@@ -152,7 +153,7 @@ msgstr "Baltais punkts"
 #. The licence of the profile, normally non-free
 #: ../data/gcm-viewer.ui.h:21
 msgid "License"
-msgstr "licence"
+msgstr "Licence"
 
 #. The file size in bytes of the profile
 #: ../data/gcm-viewer.ui.h:23
@@ -205,7 +206,7 @@ msgid ""
 "A tone reproduction curve is the mapping of scene luminance to display "
 "luminance"
 msgstr ""
-"Toņu reprodukcijas līkne is ainas spilgtuma kartēšana uz displeja spilgtuma"
+"Toņu reprodukcijas līkne ir ainas spilgtuma kartēšana uz displeja spilgtuma"
 
 #: ../data/gcm-viewer.ui.h:36
 msgid "TRC"
@@ -273,14 +274,14 @@ msgstr "Metadati"
 
 #: ../src/gcm-calibrate-argyll.c:344
 msgid "Getting default parameters"
-msgstr "Iegūst noklusētos parametrus"
+msgstr "Iegūst noklusējuma parametrus"
 
 #: ../src/gcm-calibrate-argyll.c:349
 msgid ""
 "This pre-calibrates the screen by sending colored and gray patches to your "
 "screen and measuring them with the hardware device."
 msgstr ""
-"Šis prekalibrē ekrānu, sūtot krāsu un pelēktoņu ielāpus uz jūsu ekrānu un "
+"Šis prekalibrē ekrānu, sūtot krāsu un pelēktoņu ielāpus uz ekrānu un "
 "mēra tos ar aparatūras ierīci."
 
 #: ../src/gcm-calibrate-argyll.c:438
@@ -324,7 +325,7 @@ msgstr "Mēra ielāpus"
 
 #: ../src/gcm-calibrate-argyll.c:898
 msgid "Detecting the reference patches and measuring them."
-msgstr "Nosaka norādes ielāpus un mēra tos."
+msgstr "Nosaka norādes ielāpus un tos mēra."
 
 #: ../src/gcm-calibrate-argyll.c:1008
 msgid "Generating the ICC color profile that can be used with this device."
@@ -356,7 +357,7 @@ msgstr "Iestatīt instrumentu"
 
 #: ../src/gcm-calibrate-argyll.c:1939
 msgid "Setting up the instrument for use…"
-msgstr "Iestata instrumentu lietošanai..."
+msgstr "Iestata instrumentu lietošanai…"
 
 #: ../src/gcm-calibrate-argyll.c:2151 ../src/gcm-calibrate-argyll.c:2217
 msgid "Calibration error"
@@ -456,7 +457,7 @@ msgstr "Ierīce nevarēja pareizi nomērīt krāsas punktu."
 #: ../src/gcm-calibrate-argyll.c:2386
 #, c-format
 msgid "Ready to read strip %s"
-msgstr "Gatavs nolasīt joslu %s"
+msgstr "Gatavs nolasīt loksni %s"
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2391
@@ -465,7 +466,7 @@ msgid ""
 "hold the measure switch."
 msgstr ""
 "Novietojiet krāsu mērītāju uz balta laukuma pie burta, tad klikšķiniet un "
-"turiet mērīšanas slēdzi. "
+"turiet mērīšanas slēdzi."
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2395
@@ -473,7 +474,7 @@ msgid ""
 "Slowly scan the target line from left to right and release the switch when "
 "you get to the end of the page."
 msgstr ""
-"Lēnām skenējiet mērķa rindiņu no kreisās uz labo un atlaidiet slēdzi, kad "
+"Lēnām skenējiet mērķa rindu no kreisās uz labo un atlaidiet slēdzi, kad "
 "sasniedzat lapas beigas."
 
 #. TRANSLATORS: dialog message, the sensor has to be above the line
@@ -491,7 +492,7 @@ msgid ""
 "If you make a mistake, just release the switch, and you'll get a chance to "
 "try again."
 msgstr ""
-"Ja gadās kāda kļūda, vienkārši atlaidiet slēdzi un jūs varēsiet mēģināt "
+"Ja gadās kāda kļūda, vienkārši atlaidiet slēdzi un varēsiet mēģināt "
 "vēlreiz."
 
 #: ../src/gcm-calibrate-argyll.c:2517
@@ -531,7 +532,7 @@ msgid ""
 "profiling projectors."
 msgstr ""
 "Šis krāsu mērīšanas instruments nav paredzēts atbalstīt kalibrēšanas un "
-"profilēšanas projektoriem."
+"profilēšanas projektorus."
 
 #: ../src/gcm-calibrate.c:522
 msgid "Please attach instrument"
@@ -672,7 +673,7 @@ msgstr "Kalibrē printeri"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:720
 msgid "Calibrate your device"
-msgstr "Kalibrēt ierīci"
+msgstr "Kalibrē ierīci"
 
 #. TRANSLATORS: this is the final intro page text
 #: ../src/gcm-calibrate-main.c:732
@@ -732,7 +733,7 @@ msgid ""
 "To view details about the new profile or to undo the calibration visit the "
 "<a href=\"control-center://color\">control center</a>."
 msgstr ""
-"Lai skatītu datus par jauno profilu vai lai atsauktu kalibrēšanu, "
+"Lai skatītu datus par jauno profilu vai, lai atsauktu kalibrēšanu, "
 "apmeklējiet<a href=\"control-center://color\">vadības centru</a>."
 
 #: ../src/gcm-calibrate-main.c:892
@@ -869,7 +870,7 @@ msgstr ""
 #. TRANSLATORS: dialog message, asking if it's okay to install them
 #: ../src/gcm-calibrate-main.c:1148
 msgid "Do you want them to be installed?"
-msgstr "Vai vēlaties, lai tie būtu uzinstalēti?"
+msgstr "Vai vēlaties, lai tās būtu uzinstalētas?"
 
 #. TRANSLATORS: dialog message, if the user has the target file on a CDROM then there's no need for this package
 #: ../src/gcm-calibrate-main.c:1150
@@ -1000,7 +1001,7 @@ msgstr "Izvēlieties sava displeja tipu"
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1406
 msgid "Select the monitor type that is attached to your computer."
-msgstr "Izvelieties pie datora pievienotā monitora tipu."
+msgstr "Izvēlieties pie datora pievienotā monitora tipu."
 
 #: ../src/gcm-calibrate-main.c:1408
 msgid "LCD"
@@ -1229,13 +1230,13 @@ msgstr "Nav profila"
 #: ../src/gcm-cell-renderer-profile-text.c:88
 #, c-format
 msgid "Default %s"
-msgstr "Noklusētais %s"
+msgstr "Noklusējuma %s"
 
 #. TRANSLATORS: this is a profile prefix to signify the
 #. * profile has been auto-generated for this hardware
 #: ../src/gcm-cell-renderer-profile-text.c:103
 msgid "Default: "
-msgstr "Noklusētais: "
+msgstr "Noklusējuma: "
 
 #. TRANSLATORS: this is a profile prefix to signify the
 #. * profile his a standard space like AdobeRGB
@@ -1284,7 +1285,7 @@ msgstr "Neizdevās parsēt datni — %s"
 #: ../src/gcm-import.c:166
 #, c-format
 msgid "Profile description: %s"
-msgstr "Profila apraksts: %s"
+msgstr "Profila apraksts — %s"
 
 #. TRANSLATORS: message text
 #: ../src/gcm-import.c:176
@@ -1380,7 +1381,7 @@ msgstr "Šim logam nav ICC profilu"
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:365
 msgid "Show xserver properties"
-msgstr "Rādīt xserver rekvizītus"
+msgstr "Rādīt xserver īpašības"
 
 #. TRANSLATORS: command line option
 #: ../src/gcm-inspect.c:368
@@ -1685,7 +1686,7 @@ msgstr "Šo profilu nevar izdzēst"
 #. TRANSLATORS: show just the one profile, rather than all
 #: ../src/gcm-viewer.c:1735
 msgid "Set the specific profile to show"
-msgstr "Iestatiet noteiktu profilu, kuru parādīt"
+msgstr "Iestatiet noteiktu profilu, ko parādīt"
 
 #. TRANSLATORS: show just the one filename, rather than all
 #: ../src/gcm-viewer.c:1738
