Updated Slovak translation

--- a/po/sk.po
+++ b/po/sk.po
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
 "POT-Creation-Date: 2012-10-08 16:28+0000\n"
-"PO-Revision-Date: 2012-10-10 14:37+0100\n"
+"PO-Revision-Date: 2012-10-12 09:31+0100\n"
 "Last-Translator: Roman Mátyus <romanmatyus@gmail.com>\n"
 "Language-Team: Slovak <gnome-sk-list@gnome.org>\n"
 "Language: sk\n"
@@ -146,7 +146,7 @@ msgstr "Model zariadenia"
 #. If the profile contains a display correction table
 #: ../data/gcm-viewer.ui.h:17
 msgid "Display correction"
-msgstr "Korekcia obrazovky"
+msgstr "Korekcia displeja"
 
 #. The basename (the last section of the filename) of the profile
 #: ../data/gcm-viewer.ui.h:19
@@ -795,8 +795,8 @@ msgid ""
 "Before calibrating the display, it is recommended to configure your display "
 "with the following settings to get optimal results."
 msgstr ""
-"Pre optimálny výsledok je odporúčané pred kalibráciou obrazovky nastaviť vašu "
-"obrazovku podla nasledujúcich nastavení."
+"Pre optimálny výsledok je odporúčané pred kalibráciou displeja nastaviť váš"
+"displej podla nasledujúcich nastavení."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:992
@@ -804,18 +804,18 @@ msgid ""
 "You may want to consult the owner's manual for your display on how to "
 "achieve these settings."
 msgstr ""
-"Ak chcete vedieť ako nastaviť vašu obrazovku, preštudujte si používateľskú "
-"príručku k obrazovke."
+"Ak chcete vedieť ako nastaviť váš displej, preštudujte si používateľskú "
+"príručku k dislpeju."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:995
 msgid "Reset your display to the factory defaults."
-msgstr "Obnovte výrobné nastavenie vašej obrazovky."
+msgstr "Obnovte výrobné nastavenie vášho displeja."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:998
 msgid "Disable dynamic contrast if your display has this feature."
-msgstr "Zakážte dynamický kontrast, ak má obrazovka túto funkciu."
+msgstr "Zakážte dynamický kontrast, ak má displej túto funkciu."
 
 #. TRANSLATORS: dialog message, bullet item
 #: ../src/gcm-calibrate-main.c:1001
@@ -823,7 +823,7 @@ msgid ""
 "Configure your display with custom color settings and ensure the RGB "
 "channels are set to the same values."
 msgstr ""
-"Ručne prispôsobte nastavenia obrazovky vlastnými farebnými nastaveniami a "
+"Ručne prispôsobte nastavenia displeja vlastnými farebnými nastaveniami a "
 "uistite sa, že sú RGB kanály nastavené na rovnaké hodnoty."
 
 #. TRANSLATORS: dialog message, addition to bullet item
@@ -835,7 +835,7 @@ msgstr "Ak sa farby nedajú nastaviť ručne, použite teplotu farby 6500 K."
 #: ../src/gcm-calibrate-main.c:1007
 msgid ""
 "Adjust the display brightness to a comfortable level for prolonged viewing."
-msgstr "Zmeňte jas obrazovky na úroveň, ktorá je príjemná pre dlhodobú prácu."
+msgstr "Zmeňte jas displeja na úroveň, ktorá je príjemná pre dlhodobú prácu."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate-main.c:1012
@@ -843,7 +843,7 @@ msgid ""
 "For best results, the display should have been powered for at least 15 "
 "minutes before starting the calibration."
 msgstr ""
-"Aby bol výsledok čo najlepší, obrazovka by mala byť spustená aspoň 15 minút "
+"Aby bol výsledok čo najlepší, displej by mal byť spustený aspoň 15 minút "
 "pred začatím kalibrácie."
 
 #. TRANSLATORS: this is the calibration wizard page title
@@ -1015,12 +1015,12 @@ msgstr "Vyberte obrazec"
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1399
 msgid "Choose your display type"
-msgstr "Zvoľte typ vašej obrazovky"
+msgstr "Zvoľte typ vášho displeja"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1406
 msgid "Select the monitor type that is attached to your computer."
-msgstr "Vyberte typ obrazovky pripojenej k vášmu počítaču."
+msgstr "Vyberte typ displeja pripojeného k vášmu počítaču."
 
 #: ../src/gcm-calibrate-main.c:1408
 msgid "LCD"
@@ -1041,21 +1041,21 @@ msgstr "Projektor"
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1447
 msgid "Choose Display Type"
-msgstr "Zvolte typ obrazovky"
+msgstr "Zvolte typ displeja"
 
 # nedáva mi to zmysel
 # ROMAN: je to predpoklad, ale ide asi o získanie referenčného bieloho bodu pri kalibrácií.
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1485
 msgid "Choose your display target white point"
-msgstr "Zvoľte cieľový biely bod obrazovky"
+msgstr "Zvoľte cieľový biely bod displeja"
 
 #. TRANSLATORS: this is intro page text
 #: ../src/gcm-calibrate-main.c:1492
 msgid ""
 "Most displays should be calibrated to a CIE D65 illuminant for general usage."
 msgstr ""
-"Väčšina obrazoviek pre bežné použitie by mala byť kalibrovaných podla "
+"Väčšina displejov pre bežné použitie by mala byť kalibrovaných podla "
 "svietivosti CIE D65."
 
 #: ../src/gcm-calibrate-main.c:1494
@@ -1081,7 +1081,7 @@ msgstr "Vlastné zariadenie (už nastavené ručne)"
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1543
 msgid "Choose Display Whitepoint"
-msgstr "Voľba bieleho bodu obrazovky"
+msgstr "Voľba bieleho bodu displeja"
 
 #. TRANSLATORS: this is the page title
 #: ../src/gcm-calibrate-main.c:1581
@@ -1327,7 +1327,7 @@ msgstr "Zobraziť podrobnosti"
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:264
 msgid "Import display color profile?"
-msgstr "Importovať farebný profil obrazovky?"
+msgstr "Importovať farebný profil displeja?"
 
 #. TRANSLATORS: the profile type
 #: ../src/gcm-import.c:268
@@ -1602,25 +1602,25 @@ msgstr "Štandardný priestor"
 #. TRANSLATORS: the raw EDID MD5 of the display device
 #: ../src/gcm-viewer.c:770
 msgid "Display checksum"
-msgstr "Kontrolný súčet obrazovky"
+msgstr "Kontrolný súčet displeja"
 
 #: ../src/gcm-viewer.c:771
 msgid "Display model"
-msgstr "Model obrazovky"
+msgstr "Model displeja"
 
 #: ../src/gcm-viewer.c:772
 msgid "Display serial number"
-msgstr "Sériové číslo obrazovky"
+msgstr "Sériové číslo displeja"
 
 #. TRANSLATORS: the PNPID is a three letter code, e.g. DEL
 #: ../src/gcm-viewer.c:774
 msgid "Display PNPID"
-msgstr "PNPID obrazovky"
+msgstr "PNPID displeja"
 
 #. TRANSLATORS: who made the display
 #: ../src/gcm-viewer.c:776
 msgid "Display vendor"
-msgstr "Výrobca obrazovky"
+msgstr "Výrobca displeja"
 
 #. TRANSLATORS: the raw profile MD5
 #: ../src/gcm-viewer.c:778
